--- a/Quantumult/X/maying.conf
+++ b/Quantumult/X/maying.conf
@@ -104,11 +104,11 @@ final, Outbound
 
 [rewrite_local]
 ;JD 签到 GetCookie by NoByDa
- ^https?:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBeanIndex url script-response-body JD_GetCookie.js
+ ^https?:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBeanIndex url script-response-body JD_GetCookie_QX_Auto.js
 
 [task_local]
 ;JD 签到 DailyBonus by NoByDa
-0 9 * * * JD_DailyBonus.js
+0 9 * * * JD_DailyBonus_QX_Auto.js
 
 [mitm]
 ;skip_validating_cert = false
