--- a/Quantumult/X/maying.conf
+++ b/Quantumult/X/maying.conf
@@ -47,16 +47,16 @@ server=/*.xiaomi.com/119.29.29.29
 
 [policy]
 static=AdBlock, reject, direct, img-url=https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Images/AdBlock.png
-static=Telegram, Outbound, Inbound, proxy, img-url=https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Images/Telegram.png
+static=Telegram, Outbound, Inbound, img-url=https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Images/Telegram.png
 static=PayPal, Inbound, Outbound, img-url=https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Images/PayPal.png
 static=Apple, Inbound, Outbound, img-url=https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Images/Apple.png
-static=Apple TV, Outbound, Inbound, img-url=https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Images/Apple.png
+static=Apple TV, Outbound, Inbound, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Apple_TV.png
 static=Hulu, proxy, img-url=https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Images/Hulu.png
 static=HBO, proxy, img-url=https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Images/HBO.png
 static=FOX, proxy, img-url=https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Images/FOX.png
 static=IQIYI&Bilibili, Inbound, proxy, img-url=https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Images/IQIYI.png
 static=Streaming, proxy, img-url=https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Images/Streaming.png
-static=Inbound, direct, img-url=https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Images/Inbound.png
+static=Inbound, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China.png
 static=Outbound, proxy, img-url=https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Images/Outbound.png
 
 [server_remote]
@@ -104,11 +104,11 @@ final, Outbound
 
 [rewrite_local]
 ;JD 签到 GetCookie by NoByDa
- ^https?:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBeanIndex url script-response-body JD_GetCookie_QX_Auto.js
+; ^https?:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBeanIndex url script-response-body JD_GetCookie_QX_Auto.js
 
-[task_local]
+;[task_local]
 ;JD 签到 DailyBonus by NoByDa
-0 9 * * * JD_DailyBonus_QX_Auto.js
+;0 9 * * * JD_DailyBonus_QX_Auto.js
 
 [mitm]
 ;skip_validating_cert = false
