--- a/Quantumult/X/maying.conf
+++ b/Quantumult/X/maying.conf
@@ -52,6 +52,8 @@ static=PayPal, Inbound, Outbound, img-url=https://raw.githubusercontent.com/skyt
 static=Apple, Inbound, Outbound, img-url=https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Images/Apple.png
 static=Apple TV, Outbound, Inbound, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Apple_TV.png
 static=Spotify, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Spotify.png
+static=Netflix, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netflix.png
+static=YouTube, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/YouTube.png
 static=Hulu, proxy, img-url=https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Images/Hulu.png
 static=HBO, proxy, img-url=https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Images/HBO.png
 static=FOX, proxy, img-url=https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Images/FOX.png
@@ -72,8 +74,9 @@ https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Filter/IQIY
 https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Filter/FOX.list, tag=FOX, force-policy=FOX, enabled=true
 https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Filter/HBO.list, tag=HBO, force-policy=HBO, enabled=true
 https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Filter/Hulu.list, tag=Hulu, force-policy=Hulu, enabled=true
-https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Filter/Spotify.list, tag=Spotify, force-policy=Outbound, enabled=true
-https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Filter/YouTube.list, tag=YouTube, force-policy=Outbound, enabled=true
+https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Filter/Spotify.list, tag=Spotify, force-policy=Spotify, enabled=true
+https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Filter/YouTube.list, tag=YouTube, force-policy=YouTube, enabled=true
+https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Filter/Netflix.list, tag=Netflix, force-policy=Netflix, enabled=true
 https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Filter/Streaming.list, tag=Streaming, force-policy=Streaming, enabled=true
 https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Filter/Apple%20TV.list, tag=Apple TV, force-policy=Apple TV, enabled=true
 https://raw.githubusercontent.com/ConnersHua/Profiles/master/Quantumult/X/Filter/Apple.list, tag=Apple, force-policy=Apple, enabled=true
