--- a/Quantumult/X/maying.conf
+++ b/Quantumult/X/maying.conf
@@ -51,6 +51,7 @@ static=Telegram, Outbound, Inbound, img-url=https://raw.githubusercontent.com/sk
 static=PayPal, Inbound, Outbound, img-url=https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Images/PayPal.png
 static=Apple, Inbound, Outbound, img-url=https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Images/Apple.png
 static=Apple TV, Outbound, Inbound, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Apple_TV.png
+static=Hangouts, Inbound, Outbound, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Rocket.png
 static=Spotify, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Spotify.png
 static=Netflix, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netflix.png
 static=YouTube, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/YouTube.png
@@ -75,6 +76,7 @@ https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Filter/FOX.
 https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Filter/HBO.list, tag=HBO, force-policy=HBO, enabled=true
 https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Filter/Hulu.list, tag=Hulu, force-policy=Hulu, enabled=true
 https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Filter/Spotify.list, tag=Spotify, force-policy=Spotify, enabled=true
+https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Filter/Hangouts.list, tag=Hangouts, force-policy=Hangouts, enabled=true
 https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Filter/YouTube.list, tag=YouTube, force-policy=YouTube, enabled=true
 https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Filter/Netflix.list, tag=Netflix, force-policy=Netflix, enabled=true
 https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Filter/Streaming.list, tag=Streaming, force-policy=Streaming, enabled=true
