--- a/Quantumult/X/maying.conf
+++ b/Quantumult/X/maying.conf
@@ -240,7 +240,7 @@ https:\/\/api\.termius\.com\/api\/v3\/bulk\/account\/ url script-response-body N
 https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v3\/token\.php url script-request-header NobyDa/Surge/JS/Bahamut.js
 https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v3\/token\.php url script-response-body NobyDa/Surge/JS/Bahamut.js
 
-;[task_local]
+[task_local]
 ;JD 签到 DailyBonus by NoByDa
 0 9 * * * JD_DailyBonus.js
 
