--- a/Quantumult/X/maying.conf
+++ b/Quantumult/X/maying.conf
@@ -108,6 +108,9 @@ final, Outbound
 # Get JingDong cookie. QX 1.0.5(188+):
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean(Index|GroupStageIndex) url script-request-header JD_DailyBonus.js
 
+# bilibili获取cookie
+^https:\/\/(www|live)\.bilibili\.com\/?.? url script-request-header bilibili.cookie.js
+
 # 去微博应用内广告 (By yichahucha)
 ^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|\!/photos/pic_recommend_status) url script-response-body NobyDa/QuantumultX/File/wb_ad.js
 #^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body NobyDa/QuantumultX/File/wb_launch.js
@@ -243,6 +246,7 @@ https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v3\/token\.php url script-resp
 [task_local]
 ;JD 签到 DailyBonus by NoByDa
 0 9 * * * JD_DailyBonus.js
+0 9 * * * bilibili.js
 
 [mitm]
 ;skip_validating_cert = false
