--- a/Loon/loon.conf
+++ b/Loon/loon.conf
@@ -27,7 +27,7 @@ host = 127.0.0.1
 [Remote Proxy]
 # 订阅节点
 # 格式为 别名 = 订阅 URL
-Amy = https://api.nxtlnodes.com/Subscription/ShadowRocketImportService?sid=112&token=t47bsDOjqIf
+Amy = test.url
 
 [Proxy Group]
 # 以下为策略组定义
