--- a/Quantumult/X/maying.conf
+++ b/Quantumult/X/maying.conf
@@ -48,6 +48,7 @@ server=/*.xiaomi.com/119.29.29.29
 [policy]
 static=AdBlock, reject, direct, img-url=https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Images/AdBlock.png
 static=Telegram, Outbound, Inbound, img-url=https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Images/Telegram.png
+static=RiotGame, Outbound, Inbound, img-url=https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Images/Game.png
 static=PayPal, Inbound, Outbound, img-url=https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Images/PayPal.png
 static=Apple, Inbound, Outbound, img-url=https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Images/Apple.png
 static=Apple TV, Outbound, Inbound, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Apple_TV.png
@@ -84,6 +85,7 @@ https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Filter/Appl
 https://raw.githubusercontent.com/ConnersHua/Profiles/master/Quantumult/X/Filter/Apple.list, tag=Apple, force-policy=Apple, enabled=true
 https://raw.githubusercontent.com/ConnersHua/Profiles/master/Quantumult/X/Filter/PayPal.list, tag=PayPal, force-policy=PayPal, enabled=true
 https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Filter/Telegram.list, tag=Telegram, force-policy=Telegram, enabled=true
+https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/Filter/RiotGame.list, tag=RiotGame, force-policy=RiotGame, enabled=true
 https://raw.githubusercontent.com/ConnersHua/Profiles/master/Quantumult/X/Filter/China.list, tag=Inbound, force-policy=Inbound, enabled=true
 https://raw.githubusercontent.com/ConnersHua/Profiles/master/Quantumult/X/Filter/Global.list, tag=Outbound, force-policy=Outbound, enabled=true
 https://raw.githubusercontent.com/ConnersHua/Profiles/master/Quantumult/X/Filter/LAN.list, tag=LAN, force-policy=direct, enabled=true
