--- a/Quantumult/X/ScriptApp.conf
+++ b/Quantumult/X/ScriptApp.conf
@@ -1,18 +1,9 @@
-hostname = jump2.bdimg.com,tieba.baidu.com,www.zhihu.com,zhidao.baidu.com,*acs.m.taobao.com,*api.smzdm.com,*.uve.weibo.com,ap*.bilibili.com,ap*.zhihu.com,api.m.jd.com,api.resso.app,api.weibo.cn,api.zhihu.com,gw.alicdn.com,lens.zhihu.com,mapi.weibo.com,mp.weixin.qq.com,pic*.zhimg.com,render.alipay.com
+hostname = *acs.m.taobao.com,*api.smzdm.com,*.uve.weibo.com,api.m.jd.com,api.resso.app,api.weibo.cn,creditcardapp.bankcomm.com,gw.alicdn.com,haojia.m.smzdm.com,jump2.bdimg.com,m.ctrip.com,mapi.weibo.com,mp.weixin.qq.com,pic*.zhimg.com,render.alipay.com,tieba.baidu.com,weixin110.qq.com,www.zhihu.com,zhidao.baidu.com
 
 // 需 TF 版本
 
-// 部分脚本仅作分享不代表本人观点，请合理使用并力所能及范围内支持正版（。
-
-;知乎
-^https?:\/\/pic\d\.zhimg\.com\/70\/ url reject-200
-^https?:\/\/(api|www)\.zhihu\.com\/(ab|adx|fringe|commercial|ad-style-service|.*(recommendations|extended|featured-comment-ad)|api\/v4\/(brand|mcn|(answer|question)s\/\d+\/meta_related_topics)|brand\/questions\/\d+\/activity\/answers\/red-packet(\/|\?|$)) url reject-200
-
-;哔哩哔哩
-^https?:\/\/ap(p|i)\.bilibili\.com\/(pgc\/season\/rank\/cn|x\/v2\/(dm\/ad|rank.*rid=(168|5)|dataflow\/report|search\/(defaultword|trending|recommend|resource)|splash)) url reject-200
-
 ;什么值得买
-^https?:\/\/(app-)?api\.smzdm\.com\/(v\d\/)?util\/(loading|banner) url reject-200
+^https?:\/\/((app-)?api|haojia\.m)\.smzdm\.com\/((v\d\/)?uti|detail_modu)l\/(loading|banner) url reject-200
 
 ;淘宝
 ^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.((trip\.activity|film\.mtopadvertiseapi)\.querytmsresources|(taobao\.idle\.home|aliyun\.mobile)\.welcome(page)?|.*?\.ads?\.) url reject-200
@@ -24,7 +15,10 @@ hostname = jump2.bdimg.com,tieba.baidu.com,www.zhihu.com,zhidao.baidu.com,*acs.m
 ^https?:\/\/creditcardapp\.bankcomm\.com\/mapp\/common\/queryGuidePageAds\.do$ url reject-200
 ^https?:\/\/creditcardapp\.bankcomm\.com\/mapp\/common\/getPopAds\.do$  url reject-200
 
-;Resso IN丨ID
+;携程
+^https?:\/\/socketio\.ctrip\.com\/api url reject
+
+;Resso ID
 (?<=(carrier|account|sim|sys)_region=)cn url 307 id
 
 ;百度贴吧重定向
@@ -35,8 +29,11 @@ hostname = jump2.bdimg.com,tieba.baidu.com,www.zhihu.com,zhidao.baidu.com,*acs.m
 ;知乎网页重定向
 ^https?+:\/\/www\.zhihu\.com\/question url request-header (\r\n)User-Agent:.+ request-header $1User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.0.4 Safari/605.1.15
 
+;微信 App 内被屏蔽链接快捷跳转
+^https?:\/\/weixin110\.qq\.com\/cgi-bin\/mmspamsupport-bin\/newredirectconfirmcgi url script-response-body https://raw.githubusercontent.com/HotKids/Rules/master/Script/weixin110.js
+
 ;JD App 显示历史价格 by yichahucha
-^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=(wareBusiness|serverConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
+^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
 
 ;Taobao App 显示历史价格 by yichahucha
 ^http:\/\/.+\/amdc\/mobileDispatch url script-request-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
@@ -47,11 +44,8 @@ hostname = jump2.bdimg.com,tieba.baidu.com,www.zhihu.com,zhidao.baidu.com,*acs.m
 ;^https?:\/\/ios\.prod\.ftl\.netflix\.com\/iosui\/user\/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-request-header https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js
 ;^https?:\/\/ios\.prod\.ftl\.netflix\.com\/iosui\/user\/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js
 
-;京东 App 去广告 By Primovist
-^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=(start|myOrderInfo|orderTrackBusiness) url script-response-body https://raw.githubusercontent.com/primovist/ScriptsForSurge/master/Scripts/JDAdRemove.js
-
 ;微博应用内去广告 by yichahucha
-^https?:\/\/m?api\.weibo\.c(n|om)\/2\/(statuses\/(unread|extend|positives\/get|(friends|video)(\/|_)(mix)?timeline)|stories\/(video_stream|home_list)|(groups|fangle)\/timeline|profile\/statuses|comments\/build_comments|photo\/recommend_list|service\/picfeed|searchall|cardlist|page|\!/photos\/pic_recommend_status|video\/tiny_stream_video_list) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js
+^https?:\/\/m?api\.weibo\.c(n|om)\/2\/(statuses\/(unread|extend|positives\/get|(friends|video)(\/|_)(mix)?timeline)|stories\/(video_stream|home_list)|(groups|fangle)\/timeline|profile\/statuses|comments\/build_comments|photo\/recommend_list|service\/picfeed|searchall|cardlist|page|\!/photos\/pic_recommend_status|video\/tiny_stream_video_list|photo/info) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js
 
 ;微博启动页去广告 by yichahucha
 ^https?:\/\/(sdk|wb)app\.uve\.weibo\.com(\/interface\/sdk\/sdkad.php|\/wbapplua\/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
@@ -59,11 +53,5 @@ hostname = jump2.bdimg.com,tieba.baidu.com,www.zhihu.com,zhidao.baidu.com,*acs.m
 ;微信公众号去广告 by Choler&NobyDa
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
 
-;知乎 App 去广告 by onewayticket255&Primovist
-^https?:\/\/api\.zhihu\.com\/(moments\?(action|feed_type|limit)|topstory\/recommend|.*\/questions|market\/header|people) url script-response-body https://raw.githubusercontent.com/primovist/ScriptsForSurge/master/Scripts/Zhihu.js
-
-;哔哩哔哩 App 去广告 by onewayticket255&Primovist
-^https?:\/\/ap(i|p)\.bilibili\.com\/x\/(resource\/show\/tab|v2\/(reply\/main|view\/material|account\/mine|view|feed\/index))\?access_key url script-response-body https://raw.githubusercontent.com/primovist/ScriptsForSurge/master/Scripts/Bilibili.js
-
-;什么值得买去广告 By Primovist
-^https?:\/\/(h(aojia|omepage)|(articl|baik)e|s)-api\.smzdm\.com\/(home|sou)(?!\/list_filter) url script-response-body https://raw.githubusercontent.com/primovist/ScriptsForSurge/master/Scripts/SMZDM.js
+;什么值得买去广告 By blackmatrix7
+^https?:\/\/(s|a(pp|rticle)|h(aojia|omepage))-api\.smzdm\.com\/((hom|util\/updat|article\/index_home_pag)e|sou)(\/list\?)? url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/smzdm/smzdm_remove_ads.js
