--- a/Quantumult/X/maying.conf
+++ b/Quantumult/X/maying.conf
@@ -115,6 +115,8 @@ https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/GetCookie.c
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.qxrewrite, tag=Zhihu, update-interval=86400, opt-parser=false, enabled=true
 ;Bilibili by blackmatrix7
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.qxrewrite, tag=Bilibili, update-interval=86400, opt-parser=false, enabled=true
+;Youtube去广告
+https://raw.githubusercontent.com/skytotwo/Rules/master/Quantumult/X/youtube_ad.conf, tag=Youtube_ad, update-interval=86400, opt-parser=false, enabled=true
 ;noredirect by zZPiglet
 ;https://raw.githubusercontent.com/zZPiglet/Task/master/noredirect.conf, tag=NoRedirect, update-interval=86400, opt-parser=false, enabled=true
 ;ChangeUA by zZPiglet
