--- a/Quantumult/X/GetCookie.conf
+++ b/Quantumult/X/GetCookie.conf
@@ -110,3 +110,6 @@ hostname = *.bilibili.com,*.iqiyi.com,*.jegotrip.com.cn,*.manmanbuy.com,*.meitua
 
 ;飞客茶馆 GetCookie by chavyleung
 ^https?:\/\/www\.flyertea\.com\/source\/plugin\/mobile\/mobile\.php\?module=getdata&.* url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/flyertea/flyertea.cookie.js
+
+;贴吧 GetCookie by chavyleung
+^https?:\/\/tieba\.baidu\.com\/?.? url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/tieba/tieba.cookie.js
